# aat

./: .bettercodehub.yml  .bumpversion.cfg  .clang-format  .dockerignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  GETTING_STARTED.md  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  cpplint.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.py.in  tmp.py
.github/: CODE_OF_CONDUCT.md
.github/workflows/: build.yml  codeql-analysis.yml  publish.yml
_depr/: backtest.py  enums.py  logging.py  market_data.py  order_entry.py  parser.py  persistence.py  trading.py
_depr/exchanges/: coinbase.py  gemini.py
_depr/strategies/: data_capture.py
_depr/ui/: server.py
aat/: __init__.py  __main__.py  _version.py  backtest.py  callback.py  common.py  config.py  data_source.py  define.py  enums.py  exceptions.py  exchange.py  execution.py  logging.py  main.py  market_data.py  order_book.py  order_entry.py  parser.py  persistence.py  query.py  risk.py  strategy.py  structs.py  trading.py  utils.py
aat/backup/: __main__.py  config.py  define.py  execution.py  main.py  strategy.py
aat/backup/exchanges/: synthetic.py
aat/backup/strategies/: buy_and_hold.py
aat/backup/ui/: server.py
aat/config/: __init__.py  enums.py  parser.py  types.py
aat/core/: __init__.py  exchange.py  handler.py  instrument.py  order_book.py  table.py
aat/core/_ref/: engine.c  lob.py  orderbook.py  orderbook3.py
aat/core/data/: __init__.py  cpp.py  data.py  error.py  event.py  order.py  trade.py
aat/core/engine/: __init__.py  engine.py  manager.py
aat/core/exchange/: cpp.py  db.py  exchange.py
aat/core/execution/: __init__.py  execution.py
aat/core/handler/: handler.py  print.py
aat/core/instrument/: __init__.py  calendar.py  cpp.py  db.py  instrument.py
aat/core/models/: __init__.py  data.py  error.py  event.py  order.py  position.py  trade.py
aat/core/order_book/: base.py  collector.py  cpp.py  order_book.py  order_book_lite.py  price_level.py  utils.py
aat/core/order_entry/: __init__.py  order_entry.py
aat/core/portfolio/: __init__.py  manager.py  portfolio.py
aat/cpp/: CMakeLists.txt
aat/cpp/include/aat/config/: enums.hpp
aat/cpp/include/aat/core/data/: data.hpp  event.hpp  order.hpp  trade.hpp
aat/cpp/include/aat/core/exchange/: exchange.hpp
aat/cpp/include/aat/core/instrument/: instrument.hpp
aat/cpp/include/aat/core/models/: data.hpp  event.hpp  order.hpp  position.hpp  trade.hpp
aat/cpp/include/aat/core/order_book/: collector.hpp  order_book.hpp  price_level.hpp
aat/cpp/include/aat/python/: binding.hpp
aat/cpp/src/core/data/: event.cpp  order.cpp  trade.cpp
aat/cpp/src/core/exchange/: exchange.cpp
aat/cpp/src/core/instrument/: instrument.cpp
aat/cpp/src/core/models/: data.cpp  event.cpp  order.cpp  position.cpp  trade.cpp
aat/cpp/src/core/order_book/: collector.cpp  order_book.cpp  price_level.cpp
aat/cpp/src/core/position/: account.cpp  cash.cpp  position.cpp
aat/cpp/third/pybind11_json/pybind11_json/: pybind11_json.hpp
aat/engine/: __init__.py  application.py  engine.py
aat/exchange/: __init__.py  exchange.py  market_data.py  order_entry.py
aat/exchanges/: coinbase.py  gemini.py  kraken.py  poloniex.py  synthetic.py
aat/src/: test.cpp
aat/strategies/: backtest.py  buy_and_hold.py  data_capture.py  sma.py  sma_crosses_strategy.py  test_strat.py
aat/strategy/: __init__.py  calculations.py  portfolio.py  risk.py  strategy.py  utils.py
aat/tests/: __init__.py  test_all.py  test_backtest.py  test_callback.py  test_common.py  test_config.py  test_custom_strategies.py  test_data_source.py  test_define.py  test_enums.py  test_exchange.py  test_execution.py  test_main.py  test_order_book.py  test_order_entry.py  test_parser.py  test_risk.py  test_strategy.py  test_structs.py  test_trading.py  test_utils.py
aat/ui/: application.py  server.py
cmake/: BetterEnum.txt.in  Json.txt.in  Json_pybind.txt.in  date.txt.in
config/: backtest_multi.cfg  coinbase.cfg  coinbase_sandbox.cfg  ib.cfg  ib_positions.cfg  iex.cfg  iex_intraday.cfg  iex_intraday_momentum.cfg  iex_live.cfg  simulation_multi.cfg  synthetic.cfg  twap.cfg
cpp/src/: _cpp_helpers.cpp  binding.cpp  enums.cpp  instrument.cpp  models.cpp  order_book.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/include/aat/: simple.h
cpp/tests/src/: aat.cpp  simple.cpp
docker/: Dockerfile
docker/manylinux2010/: Dockerfile
docker/manylinux2014/: Dockerfile
docker/official/: Dockerfile
docs/: Makefile  api.rst  conf.py  conf.py.in  doxygen.conf  index.rst  installation.rst  make.bat  quickstart.rst
js/: .eslintrc.js  babel.config.js  jest.config.js  package.json  tsconfig.json  webpack.config.js
js/src/ts/: index.ts
old/: .clang-format  CONTRIBUTING.md  MANIFEST.in  cpplint.cfg  setup.cfg  setup.py
old/aat/: __init__.py  _version.py
old/config/: synthetic.cfg
old/docs/: api.md
python/aat/: Cargo.toml  Makefile  pyproject.toml
python/aat/src/: lib.rs
rust/: Cargo.toml  Makefile
rust/aat/: Cargo.toml  Makefile
rust/aat-core/: Cargo.toml  Makefile
rust/aat-core/src/: lib.rs
rust/aat-core/src/common/: float.rs
rust/aat-core/src/core/: enums.rs  mod.rs
rust/aat-core/src/core/data/: account.rs  base.rs  data.rs  event.rs  mod.rs  order.rs  trade.rs
rust/aat-core/src/core/instrument/: base.rs  bond.rs  mod.rs
rust/aat-core/src/core/registry/: account.rs  base.rs  instrument.rs  mod.rs  order.rs
rust/aat-orderbook/: Cargo.toml
rust/aat-orderbook/src/: lib.rs  order_book.rs
rust/aat-orderbook/src/tests/: basic.rs  behavior.rs  common.rs  mod.rs  stress.rs
rust/aat/src/: lib.rs
rust/aat/src/common/: mod.rs
rust/aat/src/core/: enums.rs  mod.rs
rust/aat/src/core/data/: account.rs  base.rs  data.rs  exchange.rs  instrument.rs  mod.rs  order.rs  trade.rs
rust/aat/src/core/manager/: account.rs  base.rs  instrument.rs  order.rs
rust/aat/src/core/order_book/: mod.rs  order_book.rs
rust/aat/src/core/order_book/tests/: basic.rs  behavior.rs  common.rs  stress.rs
scripts/: Dockerfile.build  deploy.py  deploy.sh
(+264 files in other folders)
