[metadata]
description-file = README.md
long_description_content_type=text/markdown

[flake8]
ignore=E203, W503
max-line-length=250
per-file-ignores=
    aat/core/__init__.py:F401, F403


[mypy]
python_version = 3.7
disallow_untyped_calls = True
disallow_untyped_defs = True
show_column_numbers = True
follow_imports = silent
ignore_missing_imports = True
warn_unused_configs = True

[mypy-aat.tests.*]
ignore_errors = True
