[package]
name = "aat"
version = "0.1.0"
edition = "2021"

# TODO publish
publish = false

[lib]
name = "aat"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
num = "0.4"
ordered-float = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
# tokio = { version = "1", features = ["full"] }

[dev-dependencies]
rand = "0.8"

[profile.release]
panic = 'abort'
lto = true
